updated assets, updated header & about

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,30 +1,30 @@
+
  <div class="user-details">
   <h1> My Expertise </h1>
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <h2>Work</h2>
+      <i class="devicon-nodejs-plain colored"></i>
+      <i class="devicon-docker-plain colored"></i>
+      <i class="devicon-github-original-wordmark"></i>
+      <p>My work involves a variety of technologies, and I'm no expert at any. I'm fortunate enough to be surrounded by friends and co-workers who are the best at their fields, and always prone to lend me a hand</p>
     </div>
     <div class="tech">
-      <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <h2>Hobbies</h2>
+      <img src="assets/img/chess.png" alt="Chess" style="width:60px;height:60px;"> 
+      <img src="assets/img/guitar2.png" alt="Guitar" style="width:60px;height:60px;"> 
+      <img src="assets/img/dog.png" alt="Dog" style="width:60px;height:60px;"> 
+      <p>During my free time, I usually learn to play some riffs on my Guitar; mostly metal and math rock. 
+      You'll also find me studying chess and still sucking at it, and spending quality time with my dog Nubia</p>
     </div>
     <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <h2>Gaming</h2>
+      <img src="assets/img/d2.png" alt="Dota" style="width:60px;height:60px;"> 
+      <img src="assets/img/apex.png" alt="Apex" style="width:60px;height:60px;"> 
+      <img src="assets/img/hk.png" alt="Hollow Knight" style="width:60px;height:60px;"> 
+      <p>The one thing that I consider myself pretty good at is gaming. I've been a professional gamer before, but now I just play casually with friends.
+      I still try hard to be as competitive as possible and destroy the competition x)</p>
     </div>
 </div>
