Added socials @ header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,13 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="#"><i class="fa-solid fa-chess-king"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        
+        <a aria-label="Youtube" target="_blank" href="https://www.youtube.com/c/gonzaloantonicelli"><i class="icon fa fa-youtube" aria-hidden="true"></i></a>
+        <a aria-label="Soundcloud" target="_blank" href="https://soundcloud.com/unlucid"><i class="icon fa fa-soundcloud" aria-hidden="true"></i></a>
+        <a aria-label="Twitter" target="_blank" href="https://twitter.com/psyflesh"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+        <a aria-label="Instagram" target="_blank" href="https://www.instagram.com/gonzaloantonicelli/"><i class="icon fa fa-instagram" aria-hidden="true"></i></a>
+        <a aria-label="Steam" target="_blank" href="https://steamcommunity.com/id/fuckingpowerful"><i class="icon fa fa-steam" aria-hidden="true"></i></a>
+        <a aria-label="Github" target="_blank" href="https://github.com/fleekgonzalo"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
