removed italics from projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,7 @@ src="https://www.youtube.com/embed/ScglDSi9KUs">
   </div>
   <div class="contents">
     <h3> Hyperdemon </h3>
-    <p><i>I've been playing a shitload of Hyperdemon lately. It's such a cool game, move with style, kill demons, and grind until you rank up in the ladder. It's the sequel to Sorath's studio <a href="https://store.steampowered.com/app/422970/Devil_Daggers/"target="_blank">Devil Daggers</a>, but the scoring works different: instead of surviving for as long as you can, in this game you need to kill as much shit as you can, and as fast as you can.</i></p>
+    <p>I've been playing a shitload of Hyperdemon lately. It's such a cool game, move with style, kill demons, and grind until you rank up in the ladder. It's the sequel to Sorath's studio <a href="https://store.steampowered.com/app/422970/Devil_Daggers/"target="_blank">Devil Daggers</a>, but the scoring works different: instead of surviving for as long as you can, in this game you need to kill as much shit as you can, and as fast as you can.</p>
     <a class="project-link" href="https://store.steampowered.com/app/1743850/HYPER_DEMON/" target="_blank">Check it out on Steam!</a>
   </div>
 </div>
@@ -31,7 +31,7 @@ src="https://www.youtube.com/embed/ScglDSi9KUs">
   </div>
   <div class="contents-right">
     <h3> Some riffs I've been practicing </h3>
-    <p><i>These are some random riffs that I never really got to master or just simply didn't get around to turn into videos. I usually play pretty hard stuff, so bare with the errors and the lack of post-processing and editing, as these are mostly raw takes.</i></p>
+    <p>These are some random riffs that I never really got to master or just simply didn't get around to turn into videos. I usually play pretty hard stuff, so bare with the errors and the lack of post-processing and editing, as these are mostly raw takes.</p>
     
   </div>
 </div>
