--- a/_includes/about.html
+++ b/_includes/about.html
@@ -25,6 +25,6 @@
       <img src="assets/img/apex.png" alt="Apex" style="width:60px;height:60px;"> 
       <img src="assets/img/hk.png" alt="Hollow Knight" style="width:60px;height:60px;"> 
       <p>The one thing that I consider myself pretty good at is gaming. I've been a professional gamer before, but now I just play casually with friends.
-      I still try hard to be as competitive as possible and destroy the competition x)</p>
+      I still try hard to be as competitive as possible and destroy the competition x}</p>
     </div>
 </div>
