--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
       <img src="assets/img/guitar2.png" alt="Guitar" style="width:60px;height:60px;"> 
       <img src="assets/img/dog.png" alt="Dog" style="width:60px;height:60px;"> 
       <p>During my free time, I usually learn to play some riffs on my Guitar; mostly metal and math rock. 
-      You'll also find me studying chess and still sucking at it, and spending quality time with my dog Nubia</p>
+      You'll also find me studying chess and still sucking at it, and spending quality time with my dog Nubia <3</p>
     </div>
     <div class="tech">
       <h2>Gaming</h2>
