--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
       <i class="devicon-nodejs-plain colored"></i>
       <i class="devicon-docker-plain colored"></i>
       <i class="devicon-github-original-wordmark"></i>
-      <p>My work involves a variety of technologies, and I'm no expert at any. I'm fortunate enough to be surrounded by friends and co-workers who are the best at their fields, and always prone to lend me a hand</p>
+      <p>My daily work involves a variety of technologies, and I'm no expert at any. I'm fortunate enough to be surrounded by friends and co-workers who are the best at their fields, and always prone to lend me a hand</p>
     </div>
     <div class="tech">
       <h2>Hobbies</h2>
